--- a/templates/home.html
+++ b/templates/home.html
@@ -4,35 +4,23 @@
 {% block titulo %} HUB SOLIDÁRIO {% endblock %}
 
 {% block content %}
-<div class="bd-example">
+  <div class="carrossel">
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        {% for img in imgs %} 
+          <li data-target="#carouselExampleCaptions" data-slide-to="{{img['index']}}" class="{% if img['index']=='0' %} active{% endif %}"></li>
+        {% endfor %}
       </ol>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="{{url_for('static', filename='images/nosso ninho 1.jfif')}}" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 class= "text-dark">NOSSO NINHO</h5>
-            <p></p>
+        {% for img in imgs %} 
+          <div class="carousel-item{% if img['index']=='0' %} active{% endif %}">
+            <img src="{{img['src']}}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class= "text-dark">{{img['name']}}</h5>
+              <p></p>
+            </div>       
           </div>
-        </div>
-        <div class="carousel-item">
-          <img src="{{url_for('static', filename='images/bebe a bordo.jpg')}}" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 class= "text-dark">BEBE A BORDO</h5>
-            <p></p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="{{url_for('static', filename='images/ong.png')}}" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5 class= "text-dark">ONG</h5>
-            <p></p>
-          </div>
-        </div>
+        {% endfor %}
       </div>
       <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
