--- a/static/style.css
+++ b/static/style.css
@@ -1,19 +1,31 @@
 .carrossel{
-    max-width:75%;
-    margin: 0 auto;
-    max-height: 500px;
-    max-width: 500px;
-  }
+  max-width:75%;
+  margin: 0 auto;
+  max-height: 500px;
+  max-width: 500px;
+}
+
 .carousel-item {
   max-height: 500px;
   max-width: 500px;
 }
+
 .redes-sociais{
   float: right;
 }
+
 .redes-sociais svg{
   margin-right: 20px;
   transform: scale(2);
 }
 
+.titulo_principal, .titulo_sobre_nos {
+  color: orange;
+  text-align:center;
+}
 
+.titulo_principal {
+
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
