--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <div class= "bg-secondary">
+  <div>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: orange;">
           <span class="navbar-brand mb-0 h1">Menu</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -16,10 +16,10 @@
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item {% if active_tab == 'home' %}active{% endif %}">
                   <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if active_tab == 'instituicoes' %}active{% endif %}">
                   <a class="nav-link" href="/instituicoes">Instituições</a>
                 </li>
                 {% if mostrar_categorias %}
@@ -43,7 +43,7 @@
             </div>
           </nav>
 
-        <h1>{% block titulo %} {% endblock %}</h1>
+        <h1 class="titulo_principal">{% block titulo %} {% endblock %}</h1>
         {% block content %} {% endblock %}
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
