--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,9 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: orange;">
-          <span class="navbar-brand mb-0 h1">Menu</span>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffebcc;">
+          <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
+          <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
