--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffebcc;">
+        <nav class="navbar navbar-expand-lg navbar-light cor-fundo-laranja">
           <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
           <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,14 +18,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item {% if active_tab == 'home' %}active{% endif %}">
-                  <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link fonte-menu mr-5" href="/home">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item {% if active_tab == 'instituicoes' %}active{% endif %}">
-                  <a class="nav-link" href="/instituicoes">Instituições</a>
+                  <a class="nav-link fonte-menu mr-5" href="/instituicoes">Instituições</a>
                 </li>
                 {% if mostrar_categorias %}
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle fonte-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Categorias
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -45,7 +45,12 @@
           </nav>
 
         <h1 class="titulo_principal">{% block titulo %} {% endblock %}</h1>
+        <h4 class="titulo_secundario mb-5 mt-4">Escolha quem e como ajudar</h4>
         {% block content %} {% endblock %}
+
+        <div class="text-center p-4 cor-fundo-laranja">
+          © {{ now.year }} Copyright
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
