--- a/templates/home.html
+++ b/templates/home.html
@@ -34,9 +34,9 @@
       </a>
     </div>
   </div>
-  <div class="container">
+  <div class="container mt-5 mb-5">
     <h1 class="jumbotron-heading titulo_sobre_nos">Sobre nós</h1>
-    <p class="lead text-muted">O Portal Solidário de Araraquara é uma iniciativa de um grupo de estudantes da UNIVESP de Araraquara com o objetivo de conectar as instituições filantrópicas da cidade com as pessoas que querem fazer o bem e ajudar quem precisa.
+    <p class="lead text-muted" style="text-align: justify;">O Portal Solidário de Araraquara é uma iniciativa de um grupo de estudantes da UNIVESP de Araraquara com o objetivo de conectar as instituições filantrópicas da cidade com as pessoas que querem fazer o bem e ajudar quem precisa.
       Para que isso aconteça, o portal apresenta diversas instituições existentes, suas principais atividades, quais as formas de doação e voluntariado possíveis de serem realizadas e seus contatos.
       As instituições estão separadas por área de atuação, para permitir que as pessoas acessem o portal e escolham a forma de contribuir com a qual melhor se identifica.
       Navegue pelas instituições e escolha agora mesmo como você vai fazer a diferença na construção uma cidade melhor!</p>
