--- a/templates/instituicoes.html
+++ b/templates/instituicoes.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="card-columns">
         {% for instituicao in instituicoes %} 
-            <div class="card">
+            <div class="card col-xs-12">
                 {% if instituicao['logo'] %}
                     <img src="{{instituicao['logo']}}" class="card-img-top" alt="Nosso Ninho">
                 {% endif %}
