Adicionando descrição na página de instituições

--- a/templates/instituicoes.html
+++ b/templates/instituicoes.html
@@ -4,6 +4,10 @@
 {% block titulo %} INSTITUIÇÕES {% endblock %}
 
 {% block content %}
+ <div class="container mt-5 mb-5">
+    <p class="lead" style="text-align: center;">Separamos as instituições filantrópicas de Araraquara por categorias para você escolher as que se identificam com o seu propósito.<br/>
+        Não se esqueça de ajudar também seguindo as redes sociais das instituições!</p>
+  </div>
     <div class="card-columns">
         {% for instituicao in instituicoes %} 
             <div class="card col-xs-12">
