--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light cor-fundo-laranja">
           <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
-          <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
+          <a href="/home">
+            <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
+          </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
