--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light cor-fundo-laranja">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top cor-fundo-laranja">
           <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
           <a href="/home">
             <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
@@ -26,6 +26,9 @@
                 <li class="nav-item {% if active_tab == 'instituicoes' %}active{% endif %}">
                   <a class="nav-link fonte-menu mr-5" href="/instituicoes">Instituições</a>
                 </li>
+                <li class="nav-item {% if active_tab == 'contato' %}active{% endif %}">
+                  <a class="nav-link fonte-menu mr-5" href="/contato">Contato</a>
+                </li>
                 {% if mostrar_categorias %}
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle fonte-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,15 +42,17 @@
                   </li>
                 {% endif %}
               </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" value="{{nome or ''}}" name="nome" placeholder="Pesquisar" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar
-                </button>
-              </form>
+              {% if mostrar_categorias %}
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" value="{{nome or ''}}" name="nome" placeholder="Pesquisar" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar
+                  </button>
+                </form>
+              {% endif %}
             </div>
           </nav>
 
-        <h1 class="titulo_principal">{% block titulo %} {% endblock %}</h1>
+        <h1 class="titulo_principal" style="margin-top: 180px;">{% block titulo %} {% endblock %}</h1>
         <h4 class="titulo_secundario mb-5 mt-4">Escolha quem e como ajudar</h4>
         {% block content %} {% endblock %}
 
