--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
   </div>
   <div class="container mt-5 mb-5">
     <h1 class="jumbotron-heading titulo_sobre_nos">Sobre nós</h1>
-    <p class="lead text-muted" style="text-align: justify;">O Portal Solidário de Araraquara é uma iniciativa de um grupo de estudantes da UNIVESP de Araraquara com o objetivo de conectar as instituições filantrópicas da cidade com as pessoas que querem fazer o bem e ajudar quem precisa. Para isso, o Portal apresenta diversas instituições existentes, suas principais atividades e os links para contato através dos sites e redes sociais. As instituições estão separadas por categorias, para permitir que as pessoas acessem o portal e escolham a forma de contribuir com a qual melhor se identifica.
+    <p class="lead" style="text-align: justify;">O Portal Solidário de Araraquara é uma iniciativa de um grupo de estudantes da UNIVESP de Araraquara com o objetivo de conectar as instituições filantrópicas da cidade com as pessoas que querem fazer o bem e ajudar quem precisa. Para isso, o Portal apresenta diversas instituições existentes, suas principais atividades e os links para contato através dos sites e redes sociais. As instituições estão separadas por categorias, para permitir que as pessoas acessem o portal e escolham a forma de contribuir com a qual melhor se identifica.
       Navegue pelas instituições e escolha sua forma de contribuir para uma cidade melhor!</p>
   </div>
 {% endblock %}
