Exibindo texto alternativo nas imagens das instituições e na logo do site

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,11 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top cor-fundo-laranja">
           <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
           <a href="/home">
-            <img src="{{ url_for('static', filename='images/logo.png')}}" style="max-width: 200px;">
+            <img
+              src="{{ url_for('static', filename='images/logo.png')}}"
+              style="max-width: 200px;"
+              alt="Logo do site Hub Solidário Araraquara onde é exibida um mão na cor marrom, representado o tronco de uma árvore, e várias mãoes menores em diferentes cores, representando as folhas da árvore"
+            >
           </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
