Diminuindo texto alternativo da logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <img
               src="{{ url_for('static', filename='images/logo.png')}}"
               style="max-width: 200px;"
-              alt="Logo do site Hub Solidário Araraquara onde é exibida um mão na cor marrom, representado o tronco de uma árvore, e várias mãoes menores em diferentes cores, representando as folhas da árvore"
+              alt="Logo do site onde é exibida um mão marrom como o tronco da árvore e outras mãos como folhas da mesma"
             >
           </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
