Adicionando campos de contato no formulário de cadastro

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -184,6 +184,56 @@
                             </div>
                         </div>
 
+                        <div id="contato">
+                            <h3 class="mb-3 mt-3">Contato</h3>
+
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="telefone_comercial">Telefone Comercial</label>
+                                        <input id="telefone_comercial" type="text" name="telefone_comercial" class="form-control" />
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="telefone_celular">Telefone Celular</label>
+                                        <input id="telefone_celular" type="text" name="telefone_celular" class="form-control" />
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="email">E-mail</label>
+                                        <input id="email" type="email" name="email" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="site">Site</label>
+                                        <input id="site" type="text" name="site" class="form-control" />
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="instagram">Instagram</label>
+                                        <input id="instagram" type="text" name="instagram" class="form-control" />
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div class="md-form mt-3">
+                                        <label for="facebook">Facebook</label>
+                                        <input id="facebook" type="email" name="facebook" class="form-control" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="text-center text-md-left mt-3">
                             <input type="submit" class="btn btn-primary" value="Enviar" style="background-color: orange; border: none;" />
                         <div id="status"></div>
